Modernize to Java 17 syntax and add thread safety for parallel execution (#23)
* Add proper generics to eliminate raw type warnings

This commit implements the suggestions from the markdown documentation files
(LUATABLE_HIERARCHY.md, ARCHITECTURE.md, PARALLEL_EXECUTION.md) by adding
proper generic types throughout the codebase.

Changes:
- Added generics to raw Class types (Class -> Class<?>)
- Added generics to Hashtable declarations
- Added generics to Vector collections
- Added generics to Iterator and Enumeration
- Removed unnecessary type casts enabled by generics

Benefits:
- Improved type safety with compile-time type checking
- Better code clarity and intent
- Reduced number of unnecessary casts
- Better IDE support and autocomplete
- Modernized code to Java 5+ standards

All Lib classes (BaseLib, MathLib, TableLib, StringLib, CoroutineLib, OsLib)
were already converted to enums, so no changes were needed there.

* Remove unnecessary casts enabled by generics

Remove remaining unnecessary type casts in Savegame.java and ZonePoint.java
that were made obsolete by the addition of proper generic types to Hashtable
declarations.

Changes:
- Savegame.java: Removed (Integer) and (JavaFunction) casts
- ZonePoint.java: Removed (Double) casts

These casts are no longer needed because the generic types guarantee the
correct return types from the Hashtable.get() method.

* Replace deprecated wrapper constructors with valueOf methods

Replace deprecated constructor calls for Integer and Double with their
respective valueOf() factory methods for better performance and memory
efficiency.

Changes:
- Savegame.java: Changed 'new Integer(id)' to 'Integer.valueOf(id)'
- ZonePoint.java: Changed 'new Double(x)' to 'Double.valueOf(x)'
- WherigoLib.java: Changed 'new Double(0)' to 'Double.valueOf(0)'

These valueOf() methods use cached instances for common values, reducing
object allocation and improving performance.

* Implement Java 17 modernization and comprehensive thread safe