@@ -1,17 +1,50 @@
+/*
+ File initially copied to c:geo from https://github.com/cgeo/openWIG in April 2025.
+ Release 1.1.0 / 4386a025b88aac759e1e67cb27bcc50692d61d9a, Base Package cz.matejcik.openwig.formsts
+ */
 package cgeo.geocaching.wherigo.openwig.formats;
 
 import java.io.*;
 import java.util.Hashtable;
 
+import cgeo.geocaching.wherigo.kahlua.stdlib.BaseLib;
+import cgeo.geocaching.wherigo.kahlua.vm.JavaFunction;
+import cgeo.geocaching.wherigo.kahlua.vm.LuaClosure;
+import cgeo.geocaching.wherigo.kahlua.vm.LuaPrototype;
+import cgeo.geocaching.wherigo.kahlua.vm.LuaState;
+import cgeo.geocaching.wherigo.kahlua.vm.LuaTable;
+import cgeo.geocaching.wherigo.kahlua.vm.LuaTableImpl;
+import cgeo.geocaching.wherigo.kahlua.vm.UpValue;
+import cgeo.geocaching.wherigo.openwig.Cartridge;
 import cgeo.geocaching.wherigo.openwig.Engine;
 import cgeo.geocaching.wherigo.openwig.Serializable;
 import cgeo.geocaching.wherigo.openwig.platform.FileHandle;
-import cgeo.geocaching.wherigo.openwig.kahlua.vm.*;
 
+/**
+ * Handles saving and loading of Wherigo game state.
+ * <p>
+ * Savegame manages the serialization and deserialization of all game objects,
+ * including the Lua state, to allow games to be saved and resumed. It handles
+ * the complex task of converting between Java objects, Lua tables, and binary
+ * data streams while maintaining object references and relationships.
+ * <p>
+ * Key features:
+ * <ul>
+ * <li>Serializes entire game state including Lua tables and Java objects</li>
+ * <li>Preserves object references and circular references</li>
+ * <li>Stores Lua closures, prototypes, and upvalues</li>
+ * <li>Version checking to prevent loading incompatible saves</li>
+ * <li>Handles legacy save files from older package names</li>
+ * <li>Maintains registry of JavaFunctions for Lua callbacks</li>
+ * </ul>
+ * <p>
+ * The save file format includes a signature, version number, and serialized
+ * game objects. Only one save file is maintained per cartridge.
+ */
 public class Savegame {
 
     private static final String SIGNATURE = "openWIG savegame\n";
-    
+
     private FileHandle saveFile;
 
     public Savegame (FileHandle fc) {
@@ -30,8 +63,18 @@ public class Savegame {
     protected boolean debug = false;
     protected void debug (String s) { }
 
-    protected Class classForName (String s) throws ClassNotFoundException {
-        return Class.forName(s);
+    protected Class<?> classForName (String s) throws ClassNotFoundException {
+        try {
+            return Class.forName(s);
+        } catch (ClassNotFoundException cnfe) {
+            //handle old savefiles with maybe wrong package names
+            // e.g. cz.matejcik.openwig.Media -> needs to be cgeo.geocaching.wherigo.openwig.Media
+            final int idx = s.indexOf(".openwig.");
+            if (idx >= 0) {
+                return Class.forName("cgeo.geocaching.wherigo" + (s.substring(idx)));
+            }
+            throw cnfe;
+        }
     }
 
     protected boolean versionOk (String ver) {
@@ -54,17 +97,20 @@ public class Savegame {
             resetObjectStore();
 
             //specialcase cartridge:
-            storeValue(Engine.instance.cartridge, out);
-            
+            Engine currentEngine = Engine.getCurrentInstance();
+            if (currentEngine != null) {
+                storeValue(currentEngine.cartridge, out);
+            }
+
             storeValue(table, out);
             Engine.log("STOR: store successful", Engine.LOG_CALL);
         } finally {
-            try { out.close(); } catch (Exception e) { }
+            try { out.close(); } catch (Exception ignored) { }
         }
     }
 
     protected void resetObjectStore () {
-        objectStore = new Hashtable(256);
+        objectStore = new Hashtable<>(256);
         // XXX why did i choose to use LuaTable over Hashtable?
         currentId = 0;
         level = 0;
@@ -86,8 +132,13 @@ public class Savegame {
             resetObjectStore();
 
             // specialcase cartridge: (TODO make a generic mechanism for this)
-            Engine.instance.cartridge = (cgeo.geocaching.wherigo.openwig.Cartridge) restoreValue(dis, null);
-            
+            Engine currentEngine = Engine.getCurrentInstance();
+            if (currentEngine != null) {
+                currentEngine.cartridge = (Cartridge)restoreValue(dis, null);
+            } else {
+                restoreValue(dis, null); // still need to read from stream
+            }
+
             restoreValue(dis, table);
         } catch (IOException e) {
             e.printStackTrace();
@@ -97,41 +148,41 @@ public class Savegame {
         }
     }
 
-    private Hashtable objectStore;
+    private Hashtable<Object,Object> objectStore;
     private int currentId;
 
-    private Hashtable idToJavafuncMap = new Hashtable(128);
-    private Hashtable javafuncToIdMap = new Hashtable(128);
+    private Hashtable<Integer, JavaFunction> idToJavafuncMap = new Hashtable<>(128);
+    private Hashtable<JavaFunction, Integer> javafuncToIdMap = new Hashtable<>(128);
     private int currentJavafunc = 0;
 
     public void buildJavafuncMap (LuaTable environment) {
         LuaTable[] packages = new LuaTable[] {
             environment,
-            (LuaTable) environment.rawget("string"),
-            (LuaTable) environment.rawget("math"),
-            (LuaTable) environment.rawget("coroutine"),
-            (LuaTable) environment.rawget("os"),
-            (LuaTable) environment.rawget("table")
+            (LuaTable)environment.rawget("string"),
+            (LuaTable)environment.rawget("math"),
+            (LuaTable)environment.rawget("coroutine"),
+            (LuaTable)environment.rawget("os"),
+            (LuaTable)environment.rawget("table")
         };
         for (int i = 0; i < packages.length; i++) {
             LuaTable table = packages[i];
             Object next = null;
             while ((next = table.next(next)) != null) {
                 Object jf = table.rawget(next);
-                if (jf instanceof JavaFunction) addJavafunc((JavaFunction) jf);
+                if (jf instanceof JavaFunction) addJavafunc((JavaFunction)jf);
             }
         }
     }
 
-    private static final byte LUA_NIL   = 0x00;
+    private static final byte LUA_NIL    = 0x00;
     private static final byte LUA_DOUBLE    = 0x01;
     private static final byte LUA_STRING    = 0x02;
-    private static final byte LUA_BOOLEAN   = 0x03;
-    private static final byte LUA_TABLE = 0x04;
-    private static final byte LUA_CLOSURE   = 0x05;
+    private static final byte LUA_BOOLEAN    = 0x03;
+    private static final byte LUA_TABLE    = 0x04;
+    private static final byte LUA_CLOSURE    = 0x05;
     private static final byte LUA_OBJECT    = 0x06;
     private static final byte LUA_REFERENCE = 0x07;
-    private static final byte LUA_JAVAFUNC  = 0x08;
+    private static final byte LUA_JAVAFUNC    = 0x08;
 
     private static final byte LUATABLE_PAIR = 0x10;
     private static final byte LUATABLE_END  = 0x11;
@@ -143,13 +194,13 @@ public class Savegame {
     }
 
     private int findJavafuncId (JavaFunction javafunc) {
-        Integer id = (Integer) javafuncToIdMap.get(javafunc);
+        Integer id = javafuncToIdMap.get(javafunc);
         if (id != null) return id.intValue();
-        else throw new RuntimeException("javafunc not found in map!");
+        else throw new IllegalStateException("javafunc not found in map!");
     }
 
     private JavaFunction findJavafuncObject (int id) {
-        JavaFunction jf = (JavaFunction) idToJavafuncMap.get(new Integer(id));
+        JavaFunction jf = idToJavafuncMap.get(Integer.valueOf(id));
         return jf;
     }
 
@@ -159,10 +210,10 @@ public class Savegame {
             out.writeByte(LUA_NIL);
             return;
         }
-        Integer i = (Integer) objectStore.get(obj);
+        Integer i = (Integer)objectStore.get(obj);
         if (i != null) {
             out.writeByte(LUA_REFERENCE);
-            if (debug) debug("reference "+i.intValue()+" ("+obj.toString()+")");
+             if (debug) debug("reference "+i.intValue()+" ("+obj.toString()+")");
             out.writeInt(i.intValue());
         } else {
             i = new Integer(currentId++);
@@ -172,15 +223,15 @@ public class Savegame {
                 out.writeByte(LUA_OBJECT);
                 out.writeUTF(obj.getClass().getName());
                 if (debug) debug(obj.getClass().getName() + " (" + obj.toString()+")");
-                ((Serializable) obj).serialize(out);
+                ((Serializable)obj).serialize(out);
             } else if (obj instanceof LuaTable) {
                 out.writeByte(LUA_TABLE);
                 if (debug) debug("table("+obj.toString()+"):\n");
-                serializeLuaTable((LuaTable) obj, out);
+                serializeLuaTable((LuaTable)obj, out);
             } else if (obj instanceof LuaClosure) {
                 out.writeByte(LUA_CLOSURE);
                 if (debug) debug("closure("+obj.toString()+")");
-                serializeLuaClosure((LuaClosure) obj, out);
+                serializeLuaClosure((LuaClosure)obj, out);
             } else {
                 // we're busted
                 out.writeByte(LUA_NIL);
@@ -198,17 +249,17 @@ public class Savegame {
         } else if (obj instanceof String) {
             out.writeByte(LUA_STRING);
             if (debug) debug("\""+obj.toString()+"\"");
-            out.writeUTF((String) obj);
+            out.writeUTF((String)obj);
         } else if (obj instanceof Boolean) {
             if (debug) debug(obj.toString());
             out.writeByte(LUA_BOOLEAN);
-            out.writeBoolean(((Boolean) obj).booleanValue());
+            out.writeBoolean(((Boolean)obj).booleanValue());
         } else if (obj instanceof Double) {
             out.writeByte(LUA_DOUBLE);
             if (debug) debug(obj.toString());
-            out.writeDouble(((Double) obj).doubleValue());
+            out.writeDouble(((Double)obj).doubleValue());
         } else if (obj instanceof JavaFunction) {
-            int i = findJavafuncId((JavaFunction) obj);
+            int i = findJavafuncId((JavaFunction)obj);
             if (debug) debug("javafunc("+i+")-"+obj.toString());
             out.writeByte(LUA_JAVAFUNC);
             out.writeInt(i);
@@ -238,30 +289,34 @@ public class Savegame {
     public Object restoreValue (DataInputStream in, Object target)
     throws IOException {
         byte type = in.readByte();
-        switch (type) {
-            case LUA_NIL:
+        return switch (type) {
+            case LUA_NIL -> {
                 if (debug) debug("nil");
-                return null;
-            case LUA_DOUBLE:
+                yield null;
+            }
+            case LUA_DOUBLE -> {
                 double d = in.readDouble();
                 if (debug) debug(String.valueOf(d));
-                return LuaState.toDouble(d);
-            case LUA_STRING:
+                yield LuaState.toDouble(d);
+            }
+            case LUA_STRING -> {
                 String s = in.readUTF();
                 if (debug) debug("\"" + s + "\"");
-                return s;
-            case LUA_BOOLEAN:
+                yield s;
+            }
+            case LUA_BOOLEAN -> {
                 boolean b = in.readBoolean();
                 if (debug) debug(String.valueOf(b));
-                return LuaState.toBoolean(b);
-            case LUA_JAVAFUNC:
+                yield LuaState.toBoolean(b);
+            }
+            case LUA_JAVAFUNC -> {
                 int i = in.readInt();
                 JavaFunction jf = findJavafuncObject(i);
                 if (debug) debug("javafunc("+i+")-"+jf);
-                return jf;
-            default:
-                return restoreObject(in, type, target);
-        }
+                yield jf;
+            }
+            default -> restoreObject(in, type, target);
+        };
     }
 
     private void restCache (Object o) {
@@ -272,56 +327,62 @@ public class Savegame {
 
     private Object restoreObject (DataInputStream in, byte type, Object target)
     throws IOException {
-        switch (type) {
-            case LUA_TABLE:
+        return switch (type) {
+            case LUA_TABLE -> {
                 LuaTable lti;
-                if (target instanceof LuaTable)
-                    lti = (LuaTable) target;
+                if (target instanceof LuaTable lt)
+                    lti = lt;
                 else
                     lti = new LuaTableImpl();
                 restCache(lti);
                 if (debug) debug("table:\n");
-                return deserializeLuaTable(in, lti);
-            case LUA_CLOSURE:
+                yield deserializeLuaTable(in, lti);
+            }
+            case LUA_CLOSURE -> {
                 if (debug) debug("closure: ");
                 LuaClosure lc = deserializeLuaClosure(in);
                 if (debug) debug(lc.toString());
-                return lc;
-            case LUA_OBJECT:
+                yield lc;
+            }
+            case LUA_OBJECT -> {
                 String cls = in.readUTF();
                 Serializable s = null;
                 try {
                     if (debug) debug("object of type "+cls+"...\n");
-                    Class c = classForName(cls);
+                    Class<?> c = classForName(cls);
                     if (Serializable.class.isAssignableFrom(c)) {
-                        s = (Serializable) c.newInstance();
+                        s = (Serializable)c.newInstance();
                     }
                 } catch (Throwable e) {
                     if (debug) debug("(failed to deserialize "+cls+")\n");
                     Engine.log("REST: while trying to deserialize "+cls+":\n"+e.toString(), Engine.LOG_ERROR);
+                    BaseLib.fail("Could not deserialize object of class '" + cls + "': " + e);
                 }
                 if (s != null) {
                     restCache(s);
                     s.deserialize(in);
                 }
-                return s;
-            case LUA_REFERENCE:
+                yield s;
+            }
+            case LUA_REFERENCE -> {
                 Integer what = new Integer(in.readInt());
                 if (debug) debug("reference "+what.intValue());
                 Object result = objectStore.get(what);
                 if (result == null) {
                     Engine.log("REST: not found reference "+what.toString()+" in object store", Engine.LOG_WARN);
                     if (debug) debug(" (which happens to be null?)");
-                    return target;
+                    yield target;
                 } else {
                     if (debug) debug(" : "+result.toString());
                 }
-                return result;
-            default:
+                yield result;
+            }
+            default -> {
                 Engine.log("REST: found unknown type "+type, Engine.LOG_WARN);
                 if (debug) debug("UFO");
-                return null;
-        }
+                yield null;
+            }
+        };
     }
 
     int level = 0;
@@ -358,7 +419,9 @@ public class Savegame {
 
     private LuaClosure deserializeLuaClosure (DataInputStream in)
     throws IOException {
-        LuaClosure closure = LuaPrototype.loadByteCode(in, Engine.state.getEnvironment());
+        Engine currentEngine = Engine.getCurrentInstance();
+        LuaClosure closure = LuaPrototype.loadByteCode(in, 
+            currentEngine != null ? currentEngine.luaState.getEnvironment() : null);
         restCache(closure);
         for (int i = 0; i < closure.upvalues.length; i++) {
             UpValue u = new UpValue();
